Closed Bug 510095 Opened 16 years ago Closed 16 years ago

NJ merge: allocate LirBuffer with Allocator instead of GC, don't extend GCFinalizedObject

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: graydon, Assigned: graydon)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

This *enables* the change that occurred in tamarin cset 73312c26b484 -- absorbs the nj-specific code to enable it -- but does not actually start allocating our LirBuffers from the Allocator. Too much tracemonkey code retains pointers to live LirBuffers for that to work just yet.
Attachment #394151 - Flags: review?(gal)
Attachment #394151 - Flags: review?(gal) → review+
Whiteboard: fixed-in-tracemonkey
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: