js/src/nanojit/Fragmento.h
@@ -166,9 +166,10 @@ namespace nanojit
             DWB(Fragment*) parent;
             DWB(Fragment*) first;
             DWB(Fragment*) peer;
-            DWB(LirBuffer*) lirbuf;
-            LIns*            lastIns;
-            SideExit*       spawnedFrom;
+            LirBuffer*     lirbuf;
+            LIns*          lastIns;
+            SideExit*      spawnedFrom;
+            GuardRecord*   outbound;
 
             TraceKind kind;
             const void* ip;
