js/src/nanojit/LIR.h
@@ -1081,11 +1081,10 @@ namespace nanojit
         LIns* insGuard(LOpcode op, LInsp cond, LIns *x);
     };
 
-    class LirBuffer : public GCFinalizedObject
+    class LirBuffer
     {
         public:
             LirBuffer(Allocator&);
-            ~LirBuffer();
             void        clear();
             uintptr_t   makeRoom(size_t szB);   // make room for an instruction
 
@@ -1137,7 +1136,7 @@ namespace nanojit
 
     class LirBufWriter : public LirWriter
     {
-        DWB(LirBuffer*)    _buf;        // underlying buffer housing the instructions
+        LirBuffer*    _buf;        // underlying buffer housing the instructions
 
         public:
             LirBufWriter(LirBuffer* buf)
